[FIX] Fixed image height on mobile for cta

--- a/components/cta-section/cta-section.css
+++ b/components/cta-section/cta-section.css
@@ -24,6 +24,7 @@
 
   .mf_cta_section_img_wrapper img {
     width: 100%;
+    height: 100%;
   }
 
   .mf_cta_section_col {
